update playground notebook

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -27,8 +27,8 @@
    "source": [
     "import os\n",
     "current_dir = os.getcwd()\n",
-    "os.chdir('./python')\n",
-    "from modelManager import modelManager\n"
+    "#os.chdir('./python')\n",
+    "from modelManager import modelManager"
    ]
   },
   {
@@ -90,6 +90,13 @@
     "loadlocalmoodel.checkout_model()\n",
     "loadlocalmoodel.model_object"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
